@@ -1,6 +1,5 @@
 package pl.PBur27.ceneoWebScraper.product;
 
-import org.assertj.core.api.Assertions;
 
 import org.junit.jupiter.api.Test;
 
@@ -21,22 +20,32 @@ public class ProductTest {
     }
 
     @Test
-    void assignsFirstReviewPage(){
+    void addsPages(){
 
-        Product test = new Product("https://www.ceneo.pl/47885380#tab=reviews");
+        Product test = new Product("https://www.ceneo.pl/157746229#tab=reviews");
 
         test.setName();
-        test.addFirstReviewPage();
-        System.out.println();
+        test.addReviewPages();
 
-        String productNameInBody = test
+        String productNameInBody1 = test
                 .reviewPages
-                .getFirst()
+                .get(0)
                 .content
-                .select("#body > div.no-banner > div > div > article > div > div.product-top__product > div.product-top__product-info > div.product-top__product-info__name-container > div.product-top__title > h1")
+                .select("h1.product-top-section__product-name")
                 .text();
 
-        if (productNameInBody.equals("Długopis Parker Jotter Stainless Steel GT 1953182")){
+        String productNameInBody2 = test
+                .reviewPages
+                .get(1)
+                .content
+                .select("h1.product-top-section__product-name")
+                .text();
+
+        if (productNameInBody1.equals("Motorola Moto G54 5G 8/256GB Czarny")
+                &&
+                productNameInBody2.equals("Motorola Moto G54 5G 8/256GB Czarny")
+                &&
+                test.reviewPages.size() == 5){
             assert true;
         }
         else {
